fix sonarcube issues